# rustybox

./: Cargo.toml  README.md  notes.json  tasks.json
src/: api_client.rs  cli.rs  file_explorer.rs  json_viewer.rs  main.rs  math_eval.rs  note_keeper.rs  task_manager.rs  web_scraper.rs  word_counter.rs
