[package]
name = "rustybox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
meval = "0.2"
